--- a/EstructuraBase/index.html
+++ b/EstructuraBase/index.html
@@ -1,11 +1,14 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,user-scalable=no">
-    <title>Mi Primera Página Web</title>
+    <meta name="author" content="José Fabbiani">
+    <meta name="description" content="Hoja de Vida de José Fabbiani">
+    <title>Mi Primer ejercicio en HTML</title>
   </head>
   <body>
-    <p title="Mi primer parrafo">Hola Mundo</p>
+   <p>
+      Este es el primer HTML de José Fabbiani
+   </p>
   </body>
 </html>
