--- a/Manejo de Imagenes/index.html
+++ b/Manejo de Imagenes/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,user-scalable=no">
+    <meta name="viewport" content="width=device-width,user">
     <title>Manejo de Imagenes</title>
   </head>
   <body>
-    <img src="Img\Flag_of_Venezuela.svg.png" alt="" />
+    <img src="Img\Prueba foto.jpg" alt="Tattoo" title="Tattoo" width="200px"/>
   </body>
 </html>
