--- a/Manejo de Imagenes/index.html
+++ b/Manejo de Imagenes/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,user">
+    <meta name="viewport" content="width=device-width,user-scalable:no">
     <title>Manejo de Imagenes</title>
   </head>
   <body>
