--- a/Hipervinculos/html/pagina3.html
+++ b/Hipervinculos/html/pagina3.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user-scalable:no">
-    <title></title>
+    <title>Página 3</title>
   </head>
   <body>
-
+    <a href="../etiqueta_a.html">Volver</a>
   </body>
 </html>
