--- a/iFrame/Ejercicio iFrame/index.html
+++ b/iFrame/Ejercicio iFrame/index.html
@@ -1,20 +1,22 @@
+<!DOCTYPE html>
 <html>
-<head>
-	<title>T&iacute;tulo</title>
-</head>
-<body>
-<header>
-	<h1>
-		T&iacute;tulo
-	</h1>
-</header>
-
-<p>
-
-</p>
-
-<footer>
-	Derechos Reservados (Pie)
-</footer>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=devide-width,user-scalable=no">
+    <title>Ejercicio iFRames</title>
+  </head>
+	<body>
+	<header>
+		<h1>
+			Enlace NextUniversity
+		</h1>
+	</header>
+		<p>
+			Enlace a la pagina de NextUniversity
+		</p>
+    <iframe src="http://www.nextu.com" width="65%" height="65%" name="iFrame NextU" sandbox="allow-forms">No se puede cargar el Iframe</iframe>
+  </body>
+	<footer>
+   Derechos reservados
+	</footer>
 </html>
