--- a/svgFigurasYatributos/prueba/index2.html
+++ b/svgFigurasYatributos/prueba/index2.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Figuras Basicas SVG</title>
+    <title>Etiqueta g</title>
   </head>
   <body>
-    <header>
-      <h1>Primer SVG</h1>
-    </header>
-    <svg height="100" width="100">
-        <circle cx="50" cy="50"  r="40" fill="#00bff0" stroke="black" stroke-width="2"/>
+    <svg width="1200px" height="1200px" viewBox="0 0 1200 1200">
+      <g id="Agrupacon1" fill="red" stroke="black" stroke-width="5">
+        <rect x="150px" y="100px"  width="80px" height="80px"/>
+        <rect x="350px" y="150px"  width="150px" height="150px"/>
+      </g>
     </svg>
     </body>
 </html>
