--- a/EvaluacionFinalHTML/html/experiencia.html
+++ b/EvaluacionFinalHTML/html/experiencia.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=devide-width,user-scalable=no">
-    <title>Hoja de Vida José Fabbiani</title>
+    <title>Experiencia - José Fabbiani</title>
   </head>
   <body>
     <header>
@@ -75,16 +75,11 @@
     </header>
     <nav>
       <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="html/educacion.html">Educación</a></li>
-        <li><a href="html/experiencia.html">Experiencia</a></li>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="educacion.html">Educación</a></li>
+        <li><a href="experiencia.html">Experiencia</a></li>
       </ul>
     </nav>
-    <section>
-      <h2>Información Personal</h2>
-      <img src="images/JoseFabbiani.jpg" width="250px" height="250px" alt="Imagen Jose Fabbiani Redes"
-          title="Imagen Jose Fabbiani" />
-    </section>
 
     <h1>Etiqueta source para videos</h1>
     <video controls poster="images/24.1.png" width="500px" height="500px">
