--- a/EvaluacionFinalHTML/index.html
+++ b/EvaluacionFinalHTML/index.html
@@ -84,13 +84,13 @@
       <h2>Información Personal</h2>
       <img src="images/JoseFabbiani.jpg" width="250px" height="250px" alt="Imagen Jose Fabbiani Redes"
           title="Imagen Jose Fabbiani" />
+      <ul>
+        <li><strong>Nombres:</strong> José Manuel</li>
+        <li><strong>Apellidos:</strong> Fabbiani Chacin</li>
+        <li><strong>Edad:</strong> 41 años</li>
+      </ul>
     </section>
-
-    <h1>Etiqueta source para videos</h1>
-    <video controls poster="images/24.1.png" width="500px" height="500px">
-    		<source src="video/Comp 1_3.mp4" type="video/mp4">
-          Texto navegador no soporta ninguno de los videos
-    </video>
+    <h2>Etiqueta source para videos</h2>
     <footer>
       <p>@Derechos Reservados</p>
       <ul>
