--- a/EvaluacionFinalHTML/index.html
+++ b/EvaluacionFinalHTML/index.html
@@ -71,8 +71,11 @@
         </g>
       </svg>
       <h1>Hoja de Vida</h1>
-      <h2>José Fabbiani</h2>
     </header>
+    <section>
+      <h2>José Fabbiani</h2>
+      <h3>18/02/1977 - Puerto Ordaz, Venezuela</h3>
+    </section>
     <nav>
       <ul>
         <li><a href="index.html">Inicio</a></li>
@@ -90,11 +93,17 @@
         <li><strong>Edad:</strong> 41 años</li>
       </ul>
     </section>
-    <h2>Etiqueta source para videos</h2>
+    <section>
+      <h2>Información de Perfil</h2>
+      <ul>
+        <li><strong>Perfil:</strong> Economista, Empresario</li>
+        <li><strong>Idiomas:</strong> Español, Inglés</li>
+      </ul>
+    </section>
     <footer>
       <p>@Derechos Reservados</p>
       <ul>
-        <li><strong>Email:</strong> jose.fabbiani@gmail.com</li>
+        <li><strong>Email:</strong><a href="mailto:jose.fabbiani@gmail.com?subject=feedback"> jose.fabbiani@gmail.com</a></li>
         <li><strong>Teléfono:</strong> +58-4249614230</li>
         <li><strong>Dirección:</strong> Urb. Paratepuy, Puerto Ordaz, Venezuela.</li>
       </ul>
