--- a/EvaluacionFinalHTML/html/educacion.html
+++ b/EvaluacionFinalHTML/html/educacion.html
@@ -71,8 +71,11 @@
         </g>
       </svg>
       <h1>Hoja de Vida</h1>
-      <h2>José Fabbiani</h2>
     </header>
+    <section>
+      <h2>José Fabbiani</h2>
+      <h3>18/02/1977 - Puerto Ordaz, Venezuela</h3>
+    </section>
     <nav>
       <ul>
         <li><a href="../index.html">Inicio</a></li>
@@ -89,7 +92,7 @@
     <footer>
       <p>@Derechos Reservados</p>
       <ul>
-        <li><strong>Email:</strong> jose.fabbiani@gmail.com</li>
+        <li><strong>Email:</strong><a href="mailto:jose.fabbiani@gmail.com?subject=feedback"> jose.fabbiani@gmail.com</a></li>
         <li><strong>Teléfono:</strong> +58-4249614230</li>
         <li><strong>Dirección:</strong> Urb. Paratepuy, Puerto Ordaz, Venezuela.</li>
       </ul>
