--- a/EvaluacionFinalHTML/html/experiencia.html
+++ b/EvaluacionFinalHTML/html/experiencia.html
@@ -71,8 +71,11 @@
         </g>
       </svg>
       <h1>Hoja de Vida</h1>
-      <h2>José Fabbiani</h2>
     </header>
+    <section>
+      <h2>José Fabbiani</h2>
+      <h3>18/02/1977 - Puerto Ordaz, Venezuela</h3>
+    </section>
     <nav>
       <ul>
         <li><a href="../index.html">Inicio</a></li>
@@ -80,16 +83,27 @@
         <li><a href="experiencia.html">Experiencia</a></li>
       </ul>
     </nav>
-
-    <h1>Etiqueta source para videos</h1>
-    <video controls poster="images/24.1.png" width="500px" height="500px">
+    <h2>Experiencia</h2>
+    <hr />
+    <section>
+    <h3>Video - José Fabbiani</h3>
+    <video controls poster="images/24.1.png" width="300px" height="200px">
     		<source src="video/Comp 1_3.mp4" type="video/mp4">
           Texto navegador no soporta ninguno de los videos
     </video>
+    </section>
+    <hr />
+    <section>
+    <h3>Audio - Intereses y Hobbies</h3>
+      <audio controls >
+    		<source src="audio/audio.mp3" type="audio/mp3">
+    		Texto cuando tu browser no soporta audio
+    	</audio>
+    </section>
     <footer>
       <p>@Derechos Reservados</p>
       <ul>
-        <li><strong>Email:</strong> jose.fabbiani@gmail.com</li>
+        <li><strong>Email:</strong><a href="mailto:jose.fabbiani@gmail.com?subject=feedback"> jose.fabbiani@gmail.com</a></li>
         <li><strong>Teléfono:</strong> +58-4249614230</li>
         <li><strong>Dirección:</strong> Urb. Paratepuy, Puerto Ordaz, Venezuela.</li>
       </ul>
