Actualizacion Pagina Experiencia
Agregar Archivo de Audio y su respectivo codigo

--- a/EvaluacionFinalHTML/html/experiencia.html
+++ b/EvaluacionFinalHTML/html/experiencia.html
@@ -88,15 +88,15 @@
     <section>
     <h3>Video - José Fabbiani</h3>
     <video controls poster="images/24.1.png" width="300px" height="200px">
-    		<source src="video/Comp 1_3.mp4" type="video/mp4">
+    		<source src="../video/Comp 1_3.mp4" type="video/mp4">
           Texto navegador no soporta ninguno de los videos
     </video>
     </section>
     <hr />
     <section>
     <h3>Audio - Intereses y Hobbies</h3>
-      <audio controls >
-    		<source src="audio/audio.mp3" type="audio/mp3">
+      <audio controls autoplay>
+    		<source src="../audio/audio_jmf.mp3" type="audio/mp3">
     		Texto cuando tu browser no soporta audio
     	</audio>
     </section>
