--- a/svgFigurasYatributos/prueba/index2.html
+++ b/svgFigurasYatributos/prueba/index2.html
@@ -2,13 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Etiqueta g</title>
+    <title>Ejercicio Reloj SVG</title>
   </head>
   <body>
+    <header>
+      <h1>Reloj SVG</h1>
+    </header>
     <svg width="1200px" height="1200px" viewBox="0 0 1200 1200">
       <g id="Agrupacon1" fill="red" stroke="black" stroke-width="5">
         <rect x="150px" y="100px"  width="80px" height="80px"/>
-        <rect x="350px" y="150px"  width="150px" height="150px"/>
+        <rect box3dsidetype="350px" y="150px"  width="150px" height="150px"/>
       </g>
     </svg>
     </body>
