--- a/CSSyDisenoWebResponsive/HojasEstilosAtributos_Ejercicio/index.html
+++ b/CSSyDisenoWebResponsive/HojasEstilosAtributos_Ejercicio/index.html
@@ -1,12 +1,18 @@
 <html>
 	<head>
 		<title>HTML Base</title>
+		<link rel="stylesheet" href="css/estilos.css">
+		<style>
+			h1
+			{font-family: Arial;
+				}
+		</style>
 	</head>
 	<body>
-		<h1><img src="images/concert_logo.png" alt="Logo"> Tu concierto</h1>
+		<h1><img src="images/concert_logo.png" style="background-color: white" alt="Logo"> Tu concierto</h1>
 		<p>
 			Bienvenido a este blog de conciertos...
 		</p>
-		<img src="images/concert.jpg" alt="Concierto" width="80%">
+		<img src="images/concert.jpg" alt="Concierto" style="width: 80%">
 	</body>
 </html>
