--- a/CSSyDisenoWebResponsive/Float/index.html
+++ b/CSSyDisenoWebResponsive/Float/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width:device-width">
+    <meta name="viewport" content="width:device-width,user-scalable-no">
     <link rel="stylesheet" href="css/estilos.css">
     <title>Propiedad Float</title>
   </head>
