Cambio Evaluacion Final Css
Cambios Evaluación FInal CSS

--- a/CSSyDisenoWebResponsive/EvaluacionFinalCSS/index.html
+++ b/CSSyDisenoWebResponsive/EvaluacionFinalCSS/index.html
@@ -8,9 +8,9 @@
   <title>Comenzando con la Fotografía</title>
 </head>
 <body>
-  <div class="flex-container">
-    <header>
-      <h1>Comenzando con la fotografía</h1>
+  <div class="contenido">
+    <header class="header">
+      <h1>Comenzando con la Fotografía</h1>
       <nav>
         <ul>
           <li><a href="index.html" class="menu">Inicio</a></li>
