--- a/FrameworksyLibreriasCSS/ContenedoresyClearfix/index.html
+++ b/FrameworksyLibreriasCSS/ContenedoresyClearfix/index.html
@@ -8,14 +8,11 @@
     </head>
     <body>
       <div class="contenedor clearfix">
-
-        <div class="fila">
-          <div class="col-3">Bloque 1</div>
-          <div class="col-9">Bloque 2</div>
+        <div class="clearfix">
+          <div class="col-10">1</div>
         </div>
-        <div class="fila">
-          <div class="col-6">Bloque 3</div>
-          <div class="col-6">Bloque 4</div>
+        <div class="logo">
+          <div class="col-2">2</div>
         </div>
 
       </div>
