--- a/FrameworksyLibreriasCSS/Bootstrap/ColumnWrappingyOffsettingColumns/index.html
+++ b/FrameworksyLibreriasCSS/Bootstrap/ColumnWrappingyOffsettingColumns/index.html
@@ -2,13 +2,18 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,user-scalable=no">
-        <title>Manejo de Bootstrap</title>
-        <link rel="stylesheet" href="css/estilos.css">
+        <meta name='viewport' content='width=device-width initial-scale=1'>
+        <meta name='mobile-web-app-capable' content='yes'>  <link rel="stylesheet" href="css/estilos.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+        <title>Manejo de Bootstrap</title>
     </head>
     <body>
+      <header>
+        <nav>
+
+        </nav>
+      </header>
       <div class="row">
         <div class="col-lg-4" style="background-color:gray">UNO</div>
         <div class="col-lg-4 offset-lg-4" style="background-color:gray">DOS</div>
