--- a/FrameworksyLibreriasCSS/Bootstrap/EjercicioSistemaRejillasBootstrap/index.html
+++ b/FrameworksyLibreriasCSS/Bootstrap/EjercicioSistemaRejillasBootstrap/index.html
@@ -31,6 +31,30 @@
           <div class="titulo-cartelera col-lg-8 col-md-8 col-sm-12 col-xs-12 left-column"></div>
           <div class="titulo-cartelera col-lg-4 col-md-4 right-column"></div>
         </div>
+
+        <div class="row">
+          <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 left-column movies-row">
+            <div class="row movies-row">
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 movies-column text-center"></div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 movies-column text-center"></div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 movies-column text-center"></div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 movies-row right-column">
+            <div class="row movies-row">
+              <div class="col-lg-12 col-md-12 movies-column text-center"></div>
+          </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="titulo-cartelera col-lg-6 col-md-6 right-column left-column"></div>
+          <div class="titulo-cartelera col-lg-6 col-md-6 col-sm-12 col-xs-12"></div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6 col-md-6 right-column left-column movies-row"></div>
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 movies-row"></div>
+        </div>
       </div>
       <footer>
 
