--- a/FrameworksyLibreriasCSS/Bootstrap/EjercicioManejodeTextoseImagenes/index.html
+++ b/FrameworksyLibreriasCSS/Bootstrap/EjercicioManejodeTextoseImagenes/index.html
@@ -9,11 +9,45 @@
       <script src='js/bootstrap.min.js'></script>
       <title>Manejo de Imagenes</title>
     </head>
-    <body>
-      <div class="container">
-        <img src="img/12.jpg" alt="Imagen Buho" class="img-rounded"/><br><br>
-        <img src="img/12.jpg" alt="Imagen Buho" class="img-circle"/><br><br>
-        <img src="img/12.jpg" alt="Imagen Buho" class="img-thumbnail"/><br><br>
+    <body class="cinema-body">
+      <header>
+        <nav class="navbar navbar-inverse navbar-fixed-top affix-top">
+          <img src="img/logo.png" class="logo-img">
+        </nav>
+      </header>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="jumbotron">
+            <div class="row">
+              <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4'></div>
+              <div class='col-xs-8 col-sm-8 col-md-8 col-lg-8 text-center'>
+                <h2 class="text-uppercase welcome-title">bienvenidos a</h2>
+                <img class="jumbotron-img" src="img/logo.png">
+                <div class="jumbotron-text">Síguenos en nuestras <abbr title="Facebook, Twitter, Instagram">Redes sociales</abbr> para obtener información sobre los últimos estrenos del cine
+                </div>
+                <div class="redes-sociales">
+                  <img class="img-social img-rounded" src="img/fb.png" >
+                  <img class="img-social img-rounded" src="img/ig.png" >
+                  <img class="img-social img-rounded" src="img/tt.png" >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="titulo-cartelera">
+            <header class="text-capitalize text-center titulo-text">películas en cartelera</header>
+          </div>
+        </div>
+        <div class="row movies-row">
+          <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4'></div>
+            <div class="row movies-title">
+            <div class="row movies-title">
+            <div class="row movies-title">
+          <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4'></div>
+          <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4'></div>
+          <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4'></div>
+          <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4'></div>
+          <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4'></div>
+        </div>
       </div>
     </body>
 </html>
