--- a/FrameworksyLibreriasCSS/Bootstrap/ManejodeImagenes/index.html
+++ b/FrameworksyLibreriasCSS/Bootstrap/ManejodeImagenes/index.html
@@ -7,9 +7,9 @@
       <link rel='stylesheet' href='css/bootstrap.min.css'>
       <link rel='stylesheet' href='css/estilos.css'>
       <script src='js/bootstrap.min.js'></script>
-      <title>Manejo de Imagenes</title>
+      <title>EjercicioManejo de Imagenes</title>
     </head>
-    <body>
+    <body class="cinema-body">
       <div class="container">
         <img src="img/12.jpg" alt="Imagen Buho" class="img-rounded"/><br><br>
         <img src="img/12.jpg" alt="Imagen Buho" class="img-circle"/><br><br>
