--- a/FrameworksyLibreriasCSS/Bootstrap/EjercicioManejodeTextoseImagenes/index.html
+++ b/FrameworksyLibreriasCSS/Bootstrap/EjercicioManejodeTextoseImagenes/index.html
@@ -23,7 +23,7 @@
               <div class='col-xs-8 col-sm-8 col-md-8 col-lg-8 text-center'>
                 <h2 class="text-uppercase welcome-title">bienvenidos a</h2>
                 <img class="jumbotron-img" src="img/logo.png">
-                <div class="jumbotron-text">Síguenos en nuestras <abbr title="Facebook, Twitter, Instagram">Redes sociales</abbr> para obtener información sobre los últimos estrenos del cine
+                <div class="jumbotron-text">Síguenos en nuestras <abbr title="Facebook, Twitter, Instagram">redes sociales</abbr> para obtener información sobre los últimos estrenos del cine
                 </div>
                 <div class="redes-sociales">
                   <img class="img-social img-rounded" src="img/fb.png" >
@@ -38,16 +38,101 @@
           </div>
         </div>
         <div class="row movies-row">
-          <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4'></div>
-            <div class="row movies-title">
-            <div class="row movies-title">
-            <div class="row movies-title">
-          <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4'></div>
-          <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4'></div>
-          <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4'></div>
-          <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4'></div>
-          <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4'></div>
+          <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 text-center">
+            <div class="row">
+              <img class="img-movie" src="img/movie_1.jpg" >
+            </div>
+            <div class="row movies-title text-capitalize">La calavera del Horror 3D</div>
+            <div class="row movies-title">Sala 2</div>
+          </div>
+          <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 text-center">
+            <div class="row">
+              <img class="img-movie" src="img/movie_2.jpg" >
+            </div>
+            <div class="row movies-title text-capitalize">El Carro e Dracula</div>
+            <div class="row movies-title">Sala 5</div>
+          </div>
+          <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 text-center">
+            <div class="row">
+              <img class="img-movie" src="img/movie_7.jpg" >
+            </div>
+            <div class="row movies-title text-capitalize">La calavera del Horror 3D</div>
+            <div class="row movies-title">Sala 1</div>
+          </div>
+          <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 text-center">
+            <div class="row">
+              <img class="img-movie" src="img/movie_9.jpg" >
+            </div>
+            <div class="row movies-title text-capitalize">La Galaxia Parte I</div>
+            <div class="row movies-title">Sala 3</div>
+          </div>
+          <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 text-center">
+            <div class="row">
+              <img class="img-movie" src="img/movie_5.jpg" >
+            </div>
+            <div class="row movies-title text-capitalize">Halloween Darkness</div>
+            <div class="row movies-title">Sala 4</div>
+          </div>
+          <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 text-center">
+            <div class="row">
+              <img class="img-movie" src="img/movie_6.jpg" >
+            </div>
+            <div class="row movies-title text-capitalize">La Camara</div>
+            <div class="row movies-title">Sala 6</div>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 left-column titulo-cartelera">
+              <header class="titulo-text text-capitalize text-center">próximos estrenos</header>
+            </div>
+            <div class="col-lg-4 col-md-4 titulo-cartelera right-column">
+              <header class="titulo-text text-capitalize text-center">mejor calificada</header>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class='col-lg-8 col-md-8 col-sm-12 col-xs-12 left-column movies-row'>
+              <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center'>
+                <div class='row movies-title'>
+                  <img class='img-movie' src='img/movie_3.jpg'/>
+                </div>
+                <div class='row movies-title text-capitalize'>a wizard story</div>
+                <div class='row movies-title'>2017</div>
+              </div>
+              <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center'>
+                <div class='row movies-title'>
+                  <img class='img-movie' src='img/movie_8.jpg'/>
+                </div>
+                <div class='row movies-title text-capitalize'>a horror ngiht</div>
+                <div class='row movies-title'>2018-I</div>
+              </div>
+              <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center'>
+                <div class='row movies-title'>
+                  <img class='img-movie' src='img/movie_4.jpg'/>
+                </div>
+                <div class='row movies-title text-capitalize'>star galaxy 3D</div>
+                <div class='row movies-title'>2018-II</div>
+              </div>
+            </div>
+            <div class='col-lg-4 col-md-4 right-column movies-row'>
+              <div class='col-md-12 col-lg-12 text-center'>
+                  <div class=row>
+                    <img class='img-movie' src='img/movie_1.jpg'/>
+                  </div>
+                  <div class='row movies-title text-capitalize'>skull horror 3D</div>
+                  <div class='row movies-title'>Calificación: 10 / 10</div>
+                </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-4 col-md-4 left-column titulo-cartelera">
+                <header class="titulo-text text-capitalize text-center">servicios</header>
+              </div>
+              <div class="col-lg-8 col-md-8  col-sm-12 col-xs-12 titulo-cartelera right-column">
+                <header class="titulo-text text-capitalize text-center">registrate</header>
+              </div>
+            </div>
+          </div>
+          </div>
         </div>
-      </div>
-    </body>
+  </body>
 </html>
