--- a/FrameworksyLibreriasCSS/Bootstrap/EjercicioManejodeTextoseImagenes/index.html
+++ b/FrameworksyLibreriasCSS/Bootstrap/EjercicioManejodeTextoseImagenes/index.html
@@ -59,80 +59,100 @@
             <div class="row movies-title text-capitalize">La calavera del Horror 3D</div>
             <div class="row movies-title">Sala 1</div>
           </div>
-          <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 text-center">
+          <div class="col-md-2 col-lg-2 text-center right-column">
             <div class="row">
               <img class="img-movie" src="img/movie_9.jpg" >
             </div>
             <div class="row movies-title text-capitalize">La Galaxia Parte I</div>
             <div class="row movies-title">Sala 3</div>
           </div>
-          <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 text-center">
+          <div class="col-md-2 col-lg-2 text-center right-column">
             <div class="row">
               <img class="img-movie" src="img/movie_5.jpg" >
             </div>
             <div class="row movies-title text-capitalize">Halloween Darkness</div>
             <div class="row movies-title">Sala 4</div>
           </div>
-          <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 text-center">
+          <div class="col-md-2 col-lg-2 text-center right-column">
             <div class="row">
               <img class="img-movie" src="img/movie_6.jpg" >
             </div>
             <div class="row movies-title text-capitalize">La Camara</div>
             <div class="row movies-title">Sala 6</div>
           </div>
+        </div>
 
-          <div class="row">
-            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 left-column titulo-cartelera">
-              <header class="titulo-text text-capitalize text-center">próximos estrenos</header>
-            </div>
-            <div class="col-lg-4 col-md-4 titulo-cartelera right-column">
-              <header class="titulo-text text-capitalize text-center">mejor calificada</header>
-            </div>
+        <div class="row">
+          <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 left-column titulo-cartelera">
+            <header class="titulo-text text-capitalize text-center">próximos estrenos</header>
           </div>
-
-          <div class="row">
-            <div class='col-lg-8 col-md-8 col-sm-12 col-xs-12 left-column movies-row'>
-              <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center'>
-                <div class='row movies-title'>
-                  <img class='img-movie' src='img/movie_3.jpg'/>
-                </div>
-                <div class='row movies-title text-capitalize'>a wizard story</div>
-                <div class='row movies-title'>2017</div>
-              </div>
-              <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center'>
-                <div class='row movies-title'>
-                  <img class='img-movie' src='img/movie_8.jpg'/>
-                </div>
-                <div class='row movies-title text-capitalize'>a horror ngiht</div>
-                <div class='row movies-title'>2018-I</div>
-              </div>
-              <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center'>
-                <div class='row movies-title'>
-                  <img class='img-movie' src='img/movie_4.jpg'/>
-                </div>
-                <div class='row movies-title text-capitalize'>star galaxy 3D</div>
-                <div class='row movies-title'>2018-II</div>
-              </div>
-            </div>
-            <div class='col-lg-4 col-md-4 right-column movies-row'>
-              <div class='col-md-12 col-lg-12 text-center'>
-                  <div class=row>
-                    <img class='img-movie' src='img/movie_1.jpg'/>
-                  </div>
-                  <div class='row movies-title text-capitalize'>skull horror 3D</div>
-                  <div class='row movies-title'>Calificación: 10 / 10</div>
-                </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-4 col-md-4 left-column titulo-cartelera">
-                <header class="titulo-text text-capitalize text-center">servicios</header>
-              </div>
-              <div class="col-lg-8 col-md-8  col-sm-12 col-xs-12 titulo-cartelera right-column">
-                <header class="titulo-text text-capitalize text-center">registrate</header>
-              </div>
-            </div>
-          </div>
+          <div class="col-lg-4 col-md-4 titulo-cartelera right-column">
+            <header class="titulo-text text-capitalize text-center">mejor calificada</header>
           </div>
         </div>
+
+        <div class="row">
+          <div class='col-lg-8 col-md-8 col-sm-12 col-xs-12 left-column movies-row'>
+            <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center'>
+              <div class='row movies-title'>
+                <img class='img-movie' src='img/movie_3.jpg'/>
+              </div>
+              <div class='row movies-title text-capitalize'>a wizard story</div>
+              <div class='row movies-title'>2017</div>
+            </div>
+            <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center'>
+              <div class='row movies-title'>
+                <img class='img-movie' src='img/movie_8.jpg'/>
+              </div>
+              <div class='row movies-title text-capitalize'>a horror ngiht</div>
+              <div class='row movies-title'>2018-I</div>
+            </div>
+            <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center'>
+              <div class='row movies-title'>
+                <img class='img-movie' src='img/movie_4.jpg'/>
+              </div>
+              <div class='row movies-title text-capitalize'>star galaxy 3D</div>
+              <div class='row movies-title'>2018-II</div>
+            </div>
+          </div>
+          <div class='col-lg-4 col-md-4 right-column movies-row'>
+            <div class='col-md-12 col-lg-12 text-center'>
+              <div class=row>
+                <img class='img-movie' src='img/movie_1.jpg'/>
+              </div>
+              <div class='row movies-title text-capitalize'>skull horror 3D</div>
+              <div class='row movies-title'>Calificación: 10 / 10</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6 col-md-6 left-column right-column titulo-cartelera">
+          <header class="titulo-text text-capitalize text-center">servicios</header>
+        </div>
+        <div class="col-lg-6 col-md-6  col-sm-12 col-xs-12 titulo-cartelera">
+          <header class="titulo-text text-capitalize text-center">registrate</header>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6 col-md-6 left-column right-column movies-row text-justify">
+          <p class="services-text">En nuestro cine te ofrecemos los siguientes servicios para brindarte la mejor diversión y que disfrutes al máximo:</p>
+          <dl class='dl-horizontal'>
+            <dt class='services-text'>Salas de cine</dt>
+            <dd class='services-text'>Las mejores salas de cine con la mejor tecnología: salas 3D, 4D &amp; Vibra Sound</dd>
+          </dl>
+          <dl class='dl-horizontal'>
+            <dt class='services-text'>Juegos electrónicos</dt>
+            <dd class='services-text'>Gran variedad de juegos electrónicos que te divertiran al máximo</dd>
+          </dl>
+          <dl class='dl-horizontal'>
+            <dt class='services-text'>Restaurantes</dt>
+            <dd class='services-text'>Gran variedad de comidad y dulces para que disfrutes de algo rico antes, durante o despues de tu película.</dd>
+          </dl>
+          <h2 class='text-center text-uppercase welcome-title'>¡te esperamos!</h2>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 movies-row"></div>
+      </div>
   </body>
 </html>
