--- a/FrameworksyLibreriasCSS/Bootstrap/EjercicioManejodeTextoseImagenes/index.html
+++ b/FrameworksyLibreriasCSS/Bootstrap/EjercicioManejodeTextoseImagenes/index.html
@@ -19,7 +19,7 @@
         <div class="row">
           <div class="jumbotron">
             <div class="row">
-              <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4'></div>
+              <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center'></div>
               <div class='col-xs-8 col-sm-8 col-md-8 col-lg-8 text-center'>
                 <h2 class="text-uppercase welcome-title">bienvenidos a</h2>
                 <img class="jumbotron-img" src="img/logo.png">
@@ -37,48 +37,50 @@
             <header class="text-capitalize text-center titulo-text">películas en cartelera</header>
           </div>
         </div>
-        <div class="row movies-row">
-          <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 text-center">
-            <div class="row">
-              <img class="img-movie" src="img/movie_1.jpg" >
+        <div class="row movies-row row-centered">
+          <div class='movies-container'>
+            <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 text-center">
+              <div class="row">
+                <img class="img-movie" src="img/movie_1.jpg" >
+              </div>
+              <div class="row movies-title text-capitalize">La calavera del Horror 3D</div>
+              <div class="row movies-title">Sala 2</div>
             </div>
-            <div class="row movies-title text-capitalize">La calavera del Horror 3D</div>
-            <div class="row movies-title">Sala 2</div>
-          </div>
-          <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 text-center">
-            <div class="row">
-              <img class="img-movie" src="img/movie_2.jpg" >
+            <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 text-center">
+              <div class="row">
+                <img class="img-movie" src="img/movie_2.jpg" >
+              </div>
+              <div class="row movies-title text-capitalize">El Carro e Dracula</div>
+              <div class="row movies-title">Sala 5</div>
             </div>
-            <div class="row movies-title text-capitalize">El Carro e Dracula</div>
-            <div class="row movies-title">Sala 5</div>
-          </div>
-          <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 text-center">
-            <div class="row">
-              <img class="img-movie" src="img/movie_7.jpg" >
+            <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 text-center">
+              <div class="row">
+                <img class="img-movie" src="img/movie_7.jpg" >
+              </div>
+              <div class="row movies-title text-capitalize">La calavera del Horror 3D</div>
+              <div class="row movies-title">Sala 1</div>
             </div>
-            <div class="row movies-title text-capitalize">La calavera del Horror 3D</div>
-            <div class="row movies-title">Sala 1</div>
-          </div>
-          <div class="col-md-2 col-lg-2 text-center right-column">
-            <div class="row">
-              <img class="img-movie" src="img/movie_9.jpg" >
+            <div class="col-md-2 col-lg-2 text-center right-column">
+              <div class="row">
+                <img class="img-movie" src="img/movie_9.jpg" >
+              </div>
+              <div class="row movies-title text-capitalize">La Galaxia Parte I</div>
+              <div class="row movies-title">Sala 3</div>
             </div>
-            <div class="row movies-title text-capitalize">La Galaxia Parte I</div>
-            <div class="row movies-title">Sala 3</div>
-          </div>
-          <div class="col-md-2 col-lg-2 text-center right-column">
-            <div class="row">
-              <img class="img-movie" src="img/movie_5.jpg" >
+            <div class="col-md-2 col-lg-2 text-center right-column">
+              <div class="row">
+                <img class="img-movie" src="img/movie_5.jpg" >
+              </div>
+              <div class="row movies-title text-capitalize">Halloween Darkness</div>
+              <div class="row movies-title">Sala 4</div>
             </div>
-            <div class="row movies-title text-capitalize">Halloween Darkness</div>
-            <div class="row movies-title">Sala 4</div>
-          </div>
-          <div class="col-md-2 col-lg-2 text-center right-column">
-            <div class="row">
-              <img class="img-movie" src="img/movie_6.jpg" >
+            <div class="col-md-2 col-lg-2 text-center right-column">
+              <div class="row">
+                <img class="img-movie" src="img/movie_6.jpg" >
+              </div>
+              <div class="row movies-title text-capitalize">La Camara</div>
+              <div class="row movies-title">Sala 6</div>
             </div>
-            <div class="row movies-title text-capitalize">La Camara</div>
-            <div class="row movies-title">Sala 6</div>
           </div>
         </div>
 
@@ -92,51 +94,54 @@
         </div>
 
         <div class="row">
-          <div class='col-lg-8 col-md-8 col-sm-12 col-xs-12 left-column movies-row'>
-            <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center'>
-              <div class='row movies-title'>
-                <img class='img-movie' src='img/movie_3.jpg'/>
+          <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+            <div class="row movies-row left-column">
+              <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center">
+                <div class='row movies-title'>
+                  <img class='img-movie' src='img/movie_3.jpg'/>
+                </div>
+                <div class='row movies-title text-capitalize'>a wizard story</div>
+                <div class='row movies-title'>2017</div>
               </div>
-              <div class='row movies-title text-capitalize'>a wizard story</div>
-              <div class='row movies-title'>2017</div>
-            </div>
-            <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center'>
-              <div class='row movies-title'>
-                <img class='img-movie' src='img/movie_8.jpg'/>
+              <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center'>
+                <div class='row movies-title'>
+                  <img class='img-movie' src='img/movie_8.jpg'/>
+                </div>
+                <div class='row movies-title text-capitalize'>a horror ngiht</div>
+                <div class='row movies-title'>2018-I</div>
               </div>
-              <div class='row movies-title text-capitalize'>a horror ngiht</div>
-              <div class='row movies-title'>2018-I</div>
-            </div>
-            <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center'>
-              <div class='row movies-title'>
-                <img class='img-movie' src='img/movie_4.jpg'/>
+              <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center'>
+                <div class='row movies-title'>
+                  <img class='img-movie' src='img/movie_4.jpg'/>
+                </div>
+                <div class='row movies-title text-capitalize'>star galaxy 3D</div>
+                <div class='row movies-title'>2018-II</div>
               </div>
-              <div class='row movies-title text-capitalize'>star galaxy 3D</div>
-              <div class='row movies-title'>2018-II</div>
             </div>
           </div>
-          <div class='col-lg-4 col-md-4 right-column movies-row'>
-            <div class='col-md-12 col-lg-12 text-center'>
-              <div class=row>
-                <img class='img-movie' src='img/movie_1.jpg'/>
+          <div class="col-lg-4 col-md-4 right-column">
+            <div class="row movies-row">
+              <div class="col-md-12 col-lg-12 text-center">
+                <div class=row>
+                  <img class='img-movie' src='img/movie_1.jpg'/>
+                </div>
+                <div class='row movies-title text-capitalize'>skull horror 3D</div>
+                <div class='row movies-title'>Calificación: 10 / 10</div>
               </div>
-              <div class='row movies-title text-capitalize'>skull horror 3D</div>
-              <div class='row movies-title'>Calificación: 10 / 10</div>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-lg-6 col-md-6 left-column right-column titulo-cartelera">
-          <header class="titulo-text text-capitalize text-center">servicios</header>
+        <div class="row">
+          <div class="col-lg-6 col-md-6 left-column right-column titulo-cartelera">
+            <header class="titulo-text text-capitalize text-center">servicios</header>
+          </div>
+          <div class="col-lg-6 col-md-6  col-sm-12 col-xs-12 titulo-cartelera">
+            <header class="titulo-text text-capitalize text-center">registrate</header>
+          </div>
         </div>
-        <div class="col-lg-6 col-md-6  col-sm-12 col-xs-12 titulo-cartelera">
-          <header class="titulo-text text-capitalize text-center">registrate</header>
-        </div>
-      </div>
       <div class="row">
-        <div class="col-lg-6 col-md-6 left-column right-column movies-row text-justify">
+        <div class="col-lg-6 col-md-6 left-column right-column movies-row-last text-justify">
           <p class="services-text">En nuestro cine te ofrecemos los siguientes servicios para brindarte la mejor diversión y que disfrutes al máximo:</p>
           <dl class='dl-horizontal'>
             <dt class='services-text'>Salas de cine</dt>
@@ -152,7 +157,42 @@
           </dl>
           <h2 class='text-center text-uppercase welcome-title'>¡te esperamos!</h2>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 movies-row"></div>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 movies-row-last">
+          <form role="form">
+            <fieldset>
+              <div class="form-group text-center">
+                <legend class="user_data">Datos Personales</legend>
+                <input type="text" name="nombre" id="nombre" placeholder="Nombre Completo" class="form-control input-element"></input>
+                <input type="text" name="email" id="email" placeholder="Correo Electrónico" class="form-control input-element"></input>
+                <input type="text" name="telefono" id="telefono" placeholder="Teléfono" class="form-control input-element"></input>
+                <input type="text" name="ciudad" id="ciudad" placeholder="Ciudad" class="form-control input-element"></input>
+              </div>
+              <div class="form-group text-center">
+                <legend class="user_data">Elige tus categorías favoritas</legend>
+                <input type="checkbox" name="terror" id="terror"></input>
+                <label for="terror" class="label-class">Terror</label>
+                <input type="checkbox" name="comedia" id="comedia"></input>
+                <label for="comedia" class="label-class">Comedia</label>
+                <input type="checkbox" name="suspenso" id="suspenso"></input>
+                <label for="suspenso" class="label-class">Suspenso</label>
+                <input type="checkbox" name="accion" id="accion"></input>
+                <label for="accion" class="label-class">Acción</label>
+                <input type="checkbox" name="infantil" id="infantil"></input>
+                <label for="infantil" class="label-class">Infantil</label>
+              </div>
+              <div class="text-center">
+                <legend class="user_data">¿Desea recibir corre de nuestro sitio?</legend>
+                <input type='radio' name='si' id='si' />
+                <label for='si' class='label-class'>Si</label>
+                <input type='radio' name='no' id='no' />
+                <label for='no' class='label-class'>No</label>
+              </div>
+              <div class="text-center">
+                <button type="button" name="button" class="btn btn-primary form-control btn-save">Guardar</button>
+              </div>
+            </fieldset>
+          </form>
+        </div>
       </div>
   </body>
 </html>
