--- a/FrameworksyLibreriasCSS/Materialize/Materialize_css/index.html
+++ b/FrameworksyLibreriasCSS/Materialize/Materialize_css/index.html
@@ -12,5 +12,16 @@
   <body>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
+
+    <div class="card-panel green">Mi primer Card Panel</div>
+    <div class="card-panel green lighten-3">Mi primer Card Panel</div>
+    <div class="card-panel green darken-4">Mi primer Card Panel</div>
+
+    <div class="card-panel">
+      <span class="deep-orange-text text-darken-1">Color de Texto</span>
+
+    </div>
+
+
   </body>
 </html>
