--- a/FrameworksyLibreriasCSS/Materialize/Materialize_css/index.html
+++ b/FrameworksyLibreriasCSS/Materialize/Materialize_css/index.html
@@ -21,6 +21,10 @@
       <span class="deep-orange-text text-darken-1">Color de Texto</span>
 
     </div>
+    <div class="card-panel">
+      <span class="purple-text text-accent-4">Color de Texto</span>
+
+    </div>
 
 
   </body>
