--- a/FrameworksyLibreriasCSS/Materialize/Materialize_css/index.html
+++ b/FrameworksyLibreriasCSS/Materialize/Materialize_css/index.html
@@ -13,19 +13,24 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
 
-    <div class="card-panel green">Mi primer Card Panel</div>
-    <div class="card-panel green lighten-3">Mi primer Card Panel</div>
-    <div class="card-panel green darken-4">Mi primer Card Panel</div>
-
-    <div class="card-panel">
-      <span class="deep-orange-text text-darken-1">Color de Texto</span>
-
+    <div class="row">
+      <div class="col s3 m3 l3 yellow darken-1 white-text push-m5">
+        <p>
+          "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."
+        </p>
+      </div>
+      <div class="col s5 m5 l5 green lighten-2 black-text pull-m3">
+        <p>
+          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+        </p>
+      </div>
+      <div class="col s4 m4 l4 blue accent-3 white-text">
+        <p>
+          Integer ut molestie augue, at interdum lectus. Morbi sit amet laoreet odio. Donec auctor sed nulla ut ornare. Cras vitae tortor ut risus sagittis lacinia non sit amet est. Duis egestas facilisis varius. Quisque congue sollicitudin nulla at luctus. Donec venenatis ipsum in commodo dapibus. Cras ultrices, lectus id efficitur tincidunt, lacus lorem fermentum diam, a feugiat felis urna sit amet tellus. Integer nec condimentum risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas sit amet metus condimentum, facilisis leo vel, blandit ipsum. Mauris ultrices mauris nibh, in aliquet lectus dignissim et.
+        </p>
+      </div>
     </div>
-    <div class="card-panel">
-      <span class="purple-text text-accent-4">Color de Texto</span>
-
-    </div>
 
 
-  </body>
+    </body>
 </html>
