Ejercicios Materialize PSo

--- a/FrameworksyLibreriasCSS/Materialize/Ejerc_VisibilidadPosicionamientoMedia/index.html
+++ b/FrameworksyLibreriasCSS/Materialize/Ejerc_VisibilidadPosicionamientoMedia/index.html
@@ -22,17 +22,41 @@
         <div class="row">
           <div class="s12 m12 l8 col white columna-publicaciones">
             <div class="contenedor-write-publicacion card amber lighten-4">
-
             </div>
-            <div class="contenedor-publicacion card amber lighten-4">
 
+            <div class="contenedor-publicacion card amber lighten-4">
+              <div class="row contenido-publicacion">
+                <div class="col s12">
+                  <video src="media/vid1.mov" autoplay controls class="responsive-video media-element"></video>
+                </div>
+              </div>
             </div>
-            <div class="contenedor-publicacion card amber lighten-4">
 
+            <div class="contenedor-publicacion card amber lighten-4">
+              <div class="row contenido-publicacion">
+                <div class="row col 12">
+                  <p class="flow-text">
+                    Hola, quiero compartirles mi experiencia como programador web.
+                    He aprendido mucho de diseño front-end mediante diversos frameworks
+                    CSS y la verdad me siento muy a gusto desarrollando con Materialize CSS.
+                  </p>
+                  <blockquote>
+                    En esta ocasión estoy aprendiendo a implementar texto adaptativo, imágenes y video.
+                    Me ha resultado muy sencillo implementar cada uno de estos elementos puesto que el Framework
+                    lo hace muy sencillo. Sin embargo me surge una pregunta, tengo problemas
+                    al usar un video desde la web, ¿Alguien puede ayudarme?
+                  </blockquote>
+                </div>
+              </div>
             </div>
           </div>
           <div class="l3 offset-l1 col white columna-news hide-on-med-and-down">
-            <h5>Columna para las noticias</h5>
+            <div class="contenedor-noticias card amber lighten-4">
+              <h5 class="center-align">Últimas noticias</h5>
+              <p class="truncate">
+              -Se ha publicado la última versión de Java 8.
+              </p>
+            </div>
           </div>
         </div>
       </div>
